--- a/WebApp1/Views/Shared/_Layout.cshtml
+++ b/WebApp1/Views/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                            <a class="nav-link" asp-area="" asp-controller="SurveyParticipant" asp-action="Index">Participants</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Survey" asp-action="Index">Surveys</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
