--- a/WebApp1/Views/Survey/Index.cshtml
+++ b/WebApp1/Views/Survey/Index.cshtml
@@ -29,7 +29,7 @@
 						<a asp-controller="Survey" asp-action="Edit" asp-route-id="@obj.SurveyId" class="btn btn-primary mx-2">
 							Edit
 						</a>
-						<a asp-controller="Survey" asp-action="Delete" class="btn btn-danger mx-2">
+						<a asp-controller="Survey" asp-action="DeleteSurvey" asp-route-id="@obj.SurveyId" class=" btn btn-danger mx-2">
 							Delete
 						</a>
 					</div>
